# rational-kan-hz

./: .gitignore  CITATION.cff  LICENSE.md  Makefile  README.md  lakefile.lean  pyproject.toml  repro_manifest.json
bench/hybrid_zeckendorf/: Cargo.toml  PAPER.md  README.md  REPORT.md
bench/hybrid_zeckendorf/scripts/: compare_native_vs_legacy.py  compile_paper_tables.py  generate_base_phi_summary.py  generate_summary.py  integrate_e7_1m.sh  merge_e4_runs.py  merge_e7_runs.py  post_run_pipeline.sh
bench/hybrid_zeckendorf/src/: active_set.rs  arithmetic.rs  base_phi.rs  base_phi_bench.rs  bench_config.rs  density.rs  fib_table.rs  flat_hybrid.rs  lib.rs  normalization.rs  ntt.rs  ntt_fast.rs  production.rs  rational.rs  sparse.rs  weight.rs  zeckendorf.rs  zeckendorf_native.rs
bench/hybrid_zeckendorf/src/reference/: gmp_wrapper.rs  mod.rs
conjectures/: rational_kan_hz_lossless_p_stack_20260420.json  rational_kan_hz_pstack_in_loop_20260420.json  rational_kan_hz_pstack_speed_regime_20260420.json
docs/: FORMALIZATION_SCOPE.md  GITHUB_METADATA.md  RESULTS_INDEX.md
lean/: HeytingLean.lean
licenses/: Apoth3osis-Commercial-License-Addendum-v2.md
reference/: rational_activation_notebook.py
results/: PAPER_RUN_REPORT.md  PSTACK_IN_LOOP_REPORT.md
scripts/: verify_results.py
tests/: test_ad_rules.py  test_bit_repro.py  test_confluence_closure.py  test_gpu_scaled_training.py  test_neural_artifact_export.py  test_no_magnitude_pruning.py  test_p4_training_equivalence.py  test_paper_run.py  test_pstack_in_loop.py  test_symbolic_normalization.py
(+236 files in other folders)
