[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rational-kan-hz"
version = "0.1.0"
description = "Rational KAN reference and Boundary/HZ orchestration artifacts"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "sympy>=1.12",
  "antlr4-python3-runtime>=4.11,<4.12",
  "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
