[package]
name = "hybrid_zeckendorf_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = "1.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
smallvec = { version = "1", features = ["const_generics"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
